--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dev = [
 "weighted" = "accuralai_router.strategies.weighted:build_weighted_router"
 "failover" = "accuralai_router.strategies.failover:build_failover_router"
 "rules" = "accuralai_router.strategies.rules:build_rules_router"
+"complexity" = "accuralai_router.strategies.complexity:build_complexity_router"
 
 [project.urls]
 homepage = "https://accural-ai.web.app/"
