Add documentation URL to project metadata
Included a link to the project's documentation in the [project.urls] section of pyproject.toml for easier access to reference materials.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dev = [
 [project.urls]
 homepage = "https://accural-ai.web.app/"
 repository = "https://github.com/AccuralAI/accuralai-router"
+documentation = "https://accuralai.readthedocs.io/en/latest/packages/accuralai-router/index.html"
 
 [build-system]
 requires = ["hatchling"]
